Remove unnecessary styles and use inline-flex to prevent whitespace

--- a/src/sass/objects/_buttondropdowns.scss
+++ b/src/sass/objects/_buttondropdowns.scss
@@ -24,19 +24,21 @@
 // </button>
 //
 // Styleguide: Buttons.200
+$button-margin-left: px-to-rem(5);
 
 .#{$ns}-button--caret {
-	@include caret($color-xero-blue);
-	height: 6px;
-	margin-left: px-to-rem(5);
+  @include caret($color-xero-blue);
+  height: 6px;
+  margin-left: $button-margin-left;
 }
 
-.#{$ns}-button-main, .#{$ns}-button-create {
-	.#{$ns}-button--caret {
-	  @include caret($color-white);
-		height: 6px;
-		margin-left: px-to-rem(5);
-	}
+.#{$ns}-button-main,
+.#{$ns}-button-create {
+  .#{$ns}-button--caret {
+    @include caret($color-white);
+    height: 6px;
+    margin-left: $button-margin-left;
+  }
 }
 
 // Split Button Dropdowns
@@ -70,6 +72,6 @@
 // Styleguide: Buttons.201
 
 .#{$ns}-button-caret {
-	min-width: auto;
-	padding-left: px-to-rem(5);
+  min-width: auto;
+  padding-left: $button-margin-left;
 }
